--- a/style.css
+++ b/style.css
@@ -1,13 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Handlee&display=swap');
 *
 {
     box-sizing: border-box;
     margin: 0px;
     padding: 0px;
+    font-family: "Handlee", Helvetica, Arial, sans-serif;
 }
 .container
 {
     display: flex;
     align-items: center;
+    flex-direction: column;
+    gap: 50px;
     justify-content: center;
     height: 100vh;
     width: 100vw;
@@ -34,4 +38,14 @@
     align-items: center;
     border: 1px solid grey;
     font-size: xx-large;
+}
+
+#reset
+{
+    padding: 1.5rem;
+    width: 30%;
+    font-size: 20px;
+    background-color: black;
+    color: white;
+    font-family: "Handlee";
 }
