--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
     margin: 0px;
     padding: 0px;
-    font-family: "Handlee", Helvetica, Arial, sans-serif;
+    font-family: 'Handlee', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .container
 {
@@ -40,12 +40,12 @@
     font-size: xx-large;
 }
 
-#reset
+#restart
 {
     padding: 1.5rem;
     width: 30%;
     font-size: 20px;
     background-color: black;
     color: white;
-    font-family: "Handlee";
+    cursor: pointer;
 }
