--- a/style.css
+++ b/style.css
@@ -18,6 +18,13 @@
     border: 5px solid black;
 }
 
+#players
+{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
 #grid
 {
     display: grid;
@@ -48,4 +55,58 @@
     background-color: black;
     color: white;
     cursor: pointer;
+}
+
+.player-section
+{
+    display: flex;
+    flex-direction: column;
+    border-radius: 5px;
+    background-color: bisque;
+    align-items: center;
+    padding: 0.5rem;
+    width: 30%;
+}
+.player-section p
+{
+    font-size: 2rem;
+}
+.modal
+{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0);
+    transition: ease-in-out 0.3s;
+    color: white;
+    background-color: black;
+    padding: 1rem;
+    border-radius: 10px;
+    width: 40%;
+    aspect-ratio: 4 / 3;
+    font-size: 2.5rem;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;   
+}
+.active
+{
+    transform: translate(-50%, -50%) scale(1);
+    transition: ease-in-out 0.4s;
+}
+.overlay
+{
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: none;
+}
+.overlay-visible
+{
+    display: block;
+    transition: ease-in-out 0.4ms;
 }
